--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         }
 
         .result-image {
-            height: 400px;
+            height: 100%;
             overflow: hidden;
         }
 
@@ -654,13 +654,13 @@
             <div class="results-container">
                 <div class="result-card">
                     <div class="result-image">
-                        <img src="ANTES.PNG.jpeg" alt="Foto antes do uso do Pure Glow">
+                        <img src="C:\Users\Yago Queiroz\Downloads\shine.jpg" alt="Foto antes do uso do Pure Glow">
                     </div>
                     <div class="result-label">Antes</div>
                 </div>
                 <div class="result-card">
                     <div class="result-image">
-                        <img src="DEPOIS.JPG.jpeg" alt="Foto depois do uso do Pure Glow">
+                        <img src="C:\Users\Yago Queiroz\Downloads\shine dps.jpg" alt="Foto depois do uso do Pure Glow">
                     </div>
                     <div class="result-label">Depois</div>
                 </div>
