--- a/index.html
+++ b/index.html
@@ -671,20 +671,20 @@
             <h2>Ingredientes Naturais e Eficazes</h2>
             <div class="ingredient-list">
                 <div class="ingredient-item">
-                    <h3>Extrato de Limão Siciliano</h3>
-                    <p>Rico em vitamina C, ajuda a clarear manchas e uniformizar o tom da pele naturalmente.</p>
+                    <h3>Dolomita</h3>
+                    <p>Ajuda a controlar a oleosidade, suavizar irritações e deixar a pele com aspecto mais uniforme.</p>
                 </div>
                 <div class="ingredient-item">
-                    <h3>Ácido Kójico</h3>
-                    <p>Derivado natural que inibe a produção de melanina, reduzindo manchas escuras com eficácia.</p>
+                    <h3>Argila Branca</h3>
+                    <p>Ilumina, acalma a pele sensível e auxilia na redução de manchas leves.</p>
                 </div>
                 <div class="ingredient-item">
-                    <h3>Ácido Hialurônico</h3>
-                    <p>Proporciona hidratação profunda, melhorando a elasticidade e textura da pele.</p>
+                    <h3>Óleo de Rosa Mosqueta</h3>
+                    <p>Hidrata profundamente, ajuda na regeneração da pele e contribui para suavizar manchas, cicatrizes e linhas finas.</p>
                 </div>
                 <div class="ingredient-item">
-                    <h3>Niacinamida</h3>
-                    <p>Fortalece a barreira cutânea, reduz a inflamação e melhora a aparência geral da pele.</p>
+                    <h3>Óleos essenciais</h3>
+                    <p>Podem hidratar, acalmar ou purificar a pele, dependendo do óleo escolhido, além de potencializar tratamentos naturais.</p>
                 </div>
             </div>
         </section>
