--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
         .ingredient-list {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 30px;
         }
 
