--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
         <header>
             <div class="logo-container">
                 <div class="logo">
-                    <img src="SHINE.PNG.jpeg" alt="Shine Cosmetics">
+                    <img src="shine-logo.png" alt="Shine Cosmetics">
                 </div>
                 <div class="brand">
                     <h1>Shine Cosmetics</h1>
