--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
         <header>
             <div class="logo-container">
                 <div class="logo">
-                    <img src="shine-logo.png" alt="Shine Cosmetics">
+                    <img src="https://github.com/yago013queiro/pureglow/blob/main/shine%20logo.jpg?raw=true" alt="Shine Cosmetics">
                 </div>
                 <div class="brand">
                     <h1>Shine Cosmetics</h1>
