--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         }
 
         .logo {
-            width: 100px;
-            height: 100px;
+            width: 120px;
+            height: 120px;
             border-radius: 50%;
             overflow: hidden;
             display: flex;
@@ -65,15 +65,17 @@
             justify-content: center;
             background: linear-gradient(135deg, rgba(193, 154, 107, 0.1), rgba(193, 154, 107, 0.05));
             border: 1px solid rgba(193, 154, 107, 0.1);
-            padding: 8px;
+            padding: 0;
             box-shadow: 0 8px 20px rgba(193, 154, 107, 0.1);
+            flex-shrink: 0;
         }
 
         .logo img {
             width: 100%;
             height: 100%;
-            object-fit: contain;
+            object-fit: cover;
             display: block;
+            border-radius: 50%;
         }
 
         .brand h1 {
